// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ThesisEditor 1`] = `
<div
  id="thesis"
>
  <div
    className=" thesis-page-tools-hidden thesis-page-tools-count-5"
    id="thesis-editor"
  >
    <div
      className="thesis-button settings"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Page Settings
      </div>
      <i
        className="fa fa-wrench fa-2x"
      />
    </div>
    <div
      className="thesis-button import-export"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Import/Export/Restore Content
      </div>
      <i
        className="fa fa-exchange fa-2x"
      />
    </div>
    <div
      className="thesis-button save"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Publish Changes
      </div>
      <i
        className="fa fa-save fa-2x"
      />
    </div>
    <div
      className="thesis-button cancel"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Discard Changes
      </div>
      <i
        className="fa fa-remove fa-2x"
      />
    </div>
    <div
      className="thesis-button edit"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Edit Page
      </div>
      <i
        className="fa fa-edit fa-2x"
      />
    </div>
  </div>
  <div
    className=" thesis-page-tools-hidden thesis-page-tools-count-5"
    id="thesis-fader"
  />
  <div
    className={null}
    id="thesis-tray"
  >
    <div
      className="attribution"
    >
      <a
        href="//github.com/infinitered/thesis-phoenix"
        target="_blank"
      >
        Thesis
      </a>
       is maintained by 
      <a
        href="//infinite.red"
        target="_blank"
      >
        Infinite Red
      </a>
    </div>
  </div>
</div>
`;

exports[`renders ThesisEditor with an add button 1`] = `
<div
  id="thesis"
>
  <div
    className=" thesis-page-tools-hidden thesis-page-tools-count-6"
    id="thesis-editor"
  >
    <div
      className="thesis-button settings"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Page Settings
      </div>
      <i
        className="fa fa-wrench fa-2x"
      />
    </div>
    <div
      className="thesis-button import-export"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Import/Export/Restore Content
      </div>
      <i
        className="fa fa-exchange fa-2x"
      />
    </div>
    <div
      className="thesis-button save"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Publish Changes
      </div>
      <i
        className="fa fa-save fa-2x"
      />
    </div>
    <div
      className="thesis-button cancel"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Discard Changes
      </div>
      <i
        className="fa fa-remove fa-2x"
      />
    </div>
    <div
      className="thesis-button add"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Add New Page
      </div>
      <i
        className="fa fa-plus fa-2x"
      />
    </div>
    <div
      className="thesis-button edit"
      onClick={[Function]}
    >
      <div
        className="tooltip"
      >
        Edit Page
      </div>
      <i
        className="fa fa-edit fa-2x"
      />
    </div>
  </div>
  <div
    className=" thesis-page-tools-hidden thesis-page-tools-count-6"
    id="thesis-fader"
  />
  <div
    className={null}
    id="thesis-tray"
  >
    <div
      className="attribution"
    >
      <a
        href="//github.com/infinitered/thesis-phoenix"
        target="_blank"
      >
        Thesis
      </a>
       is maintained by 
      <a
        href="//infinite.red"
        target="_blank"
      >
        Infinite Red
      </a>
    </div>
  </div>
</div>
`;
